Add: 水平方向のrecenter関数を追加
- C-l (phscroll-recenter-top-bottom)
- C-S-l (phscroll-recenter-left-right)

--- a/README.org
+++ b/README.org
@@ -22,6 +22,8 @@ The following keys are available in scrolling area:
 
 - C-x < (M-x phscroll-scroll-left)
 - C-x > (M-x phscroll-scroll-right)
+- C-l (M-x phscroll-recenter-top-bottom)
+- C-S-l (M-x phscroll-recenter-left-right)
 
 * In org-mode
 
