--- a/README.org
+++ b/README.org
@@ -33,3 +33,7 @@ The following elisp enables horizontal scrolling in table parts of org-mode docu
 (setq org-startup-truncated nil)
 (load "org-phscroll.el")
 #+end_src
+
+Tips:
+- To turn off the effect of phscroll, use M-x org-phscroll-mode.
+- To scroll the current position of the screen to the left edge, press C-S-l twice.
